# alfred3-interact

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  pytest.yml
docs/source/: conf.py  howto_admin.rst  howto_condition.rst  howto_match.rst  index.rst
src/alfred3-interact/: _version.py
src/alfred3_interact/: __init__.py  _util.py  _version.py  chat.py  data.py  element.py  group.py  manager.py  match.py  member.py  page.py  quota.py  randomizer.py  spec.py  testutil.py
src/alfred3_interact/templates/html/: ChatElement.html.j2  ToggleMatchMakerActivation.html.j2  ViewMembersElement.html.j2
src/alfred3_interact/templates/js/: chat_element.js.j2  toggle_match_maker.js.j2  view_members.js.j2
tests/: _util.py  conftest.py  create.py  test_chat.py  test_db.py  test_group.py  test_match.py  test_match_chain.py  test_match_quota.py  test_match_random.py  test_match_to.py  test_member.py  test_page.py  test_quota.py  test_randomizer.py  test_spec.py
tests/res/: script-admin.py  script-match_chain.py  script-match_groupwise.py  script-match_maxgroups.py  script-match_random.py  script-match_stepwise.py  script-wait.py  secrets-default.conf
