[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "alfred3_interact"
dynamic = ["version"]
description = "Components for interactive experiments in the alfred3 framework."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT License" }
authors = [
  { name = "Johannes Brachem", email = "brachem@uni-goettingen.de" },
  { name = "Christian Treffenstädt" }
]
dependencies = [
  "alfred3>=3.0",
  "bleach>=3.2.1",
  "packaging"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "black",
  "flake8",
  "python-dotenv",
  "mongomock",
  "bs4",
  "selenium",
  "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/jobrachem/alfred3-interact"

[tool.hatch.version]
path = "src/alfred3_interact/_version.py"

[tool.hatch.build]
include = [
  "src/alfred3_interact/templates/html/*",
  "src/alfred3_interact/templates/js/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/alfred3_interact"]
